--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "goit-node-rest-api",
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./app.js",
     "dev": "nodemon ./app.js"
   },
@@ -9,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nanoid": "^5.0.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
