--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
@@ -17,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.5"
+    "nanoid": "^5.0.5",
+    "nodemailer": "^6.9.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
